--- a/styles.css
+++ b/styles.css
@@ -160,4 +160,14 @@ h2{
     width: 100%;
     max-width: 500px;
   }
+
+  .section-currIss {
+  text-align: left;
+  flex: 1;
+  min-width: 300px;
+  padding: 1rem;
+  opacity: 1;
+  transform: translateY(20px);
+  transition: all 0.6s ease-out;
+}
 }
