--- a/styles.css
+++ b/styles.css
@@ -125,8 +125,8 @@ h2{
 }
 
 .apa-reference{
-  text-indent: -36px;
-  padding-left: 1em;
+  text-indent: -1em;
+  padding-left: 36px;
   line-height: 2;
 }
 
