--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ h2{
 
 .apa-reference{
   font-family: 'Times New Roman', Times, serif;
+  font-size: 12pt;
   text-indent: -36px;
   padding-left: 36px;
   line-height: 2;
